// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationComponent snapshots should match snapshot with default state 1`] = `
<div
  class="bg-white"
  id="root4"
>
  
  <header
    class="relative bg-white"
  >
    <nav
      aria-label="Top"
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
    >
      <div
        class="border-b border-gray-200"
      >
        <div
          class="flex h-16 items-center"
        >
          <button
            class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden"
            type="button"
          >
            <span
              class="absolute -inset-0.5"
            />
            <span
              class="sr-only"
            >
              Open menu
            </span>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="ml-4 flex lg:ml-0 h-8 w-8 relative"
          >
            <a
              href="/"
              routerlink="/"
            >
              <span
                class="sr-only"
              >
                Demo Shop
              </span>
              <img
                alt="Demo shop logo"
                class="object-contain"
                fetchpriority="auto"
                fill=""
                loading="lazy"
                ng-img="true"
                ngsrc="icons/demo-shop.png"
                sizes="100vw"
                src="icons/demo-shop.png"
                style="position: absolute; width: 100%; height: 100%; inset: 0;"
              />
            </a>
          </div>
          <div
            class="hidden lg:ml-8 lg:block lg:self-stretch"
          >
            <div
              class="flex h-full space-x-8"
            >
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route1"
                >
                   Route1 
                </a>
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route2"
                >
                   Route2 
                </a>
              </div>
              
            </div>
          </div>
          <div
            class="ml-auto flex items-center"
          >
            <lib-user-navigation
              class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
            />
            <lib-product-search />
            <lib-cart-icon />
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`NavigationComponent snapshots should match snapshot with mobile menu open 1`] = `
<div
  class="bg-white"
  id="root5"
>
  <dialog
    aria-modal="true"
    class="relative z-40 lg:hidden ng-trigger ng-trigger-animateBackdrop ng-animating"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-25"
    />
  </dialog>
  <div
    class="absolute h-screen z-40 flex w-full max-w-xs flex-col overflow-y-auto bg-white px-6 p-2 shadow-xl ng-trigger ng-trigger-animateSlideOver ng-animating"
  >
    <div
      class="sticky z-20 top-0 flex px-4 pb-2 pt-5"
    >
      <button
        class="relative opacity-90 -m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 bg-white"
        type="button"
      >
        <span
          class="absolute -inset-0.5"
        />
        <span
          class="sr-only"
        >
          Close menu
        </span>
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 space-y-6 border-t border-gray-200 px-4 py-6"
    >
      <div
        class="flow-root"
        style=""
      >
        <a
          class="-m-2 block p-2 font-medium text-gray-700 hover:text-gray-800 text-xl"
          href="/route1"
        >
           Route1 
        </a>
      </div>
      <div
        class="flow-root"
        style=""
      >
        <a
          class="-m-2 block p-2 font-medium text-gray-700 hover:text-gray-800 text-xl"
          href="/route2"
        >
           Route2 
        </a>
      </div>
      
    </div>
    <lib-user-navigation
      class="lg:hidden space-y-6 border-t border-gray-200 px-4 py-6"
      issmallscreen=""
    />
  </div>
  
  <header
    class="relative bg-white"
  >
    <nav
      aria-label="Top"
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
    >
      <div
        class="border-b border-gray-200"
      >
        <div
          class="flex h-16 items-center"
        >
          <button
            class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden"
            type="button"
          >
            <span
              class="absolute -inset-0.5"
            />
            <span
              class="sr-only"
            >
              Open menu
            </span>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="ml-4 flex lg:ml-0 h-8 w-8 relative"
          >
            <a
              href="/"
              routerlink="/"
            >
              <span
                class="sr-only"
              >
                Demo Shop
              </span>
              <img
                alt="Demo shop logo"
                class="object-contain"
                fetchpriority="auto"
                fill=""
                loading="lazy"
                ng-img="true"
                ngsrc="icons/demo-shop.png"
                sizes="100vw"
                src="icons/demo-shop.png"
                style="position: absolute; width: 100%; height: 100%; inset: 0;"
              />
            </a>
          </div>
          <div
            class="hidden lg:ml-8 lg:block lg:self-stretch"
          >
            <div
              class="flex h-full space-x-8"
            >
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route1"
                >
                   Route1 
                </a>
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route2"
                >
                   Route2 
                </a>
              </div>
              
            </div>
          </div>
          <div
            class="ml-auto flex items-center"
          >
            <lib-user-navigation
              class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
            />
            <lib-product-search />
            <lib-cart-icon />
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;
